--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <canvas id='grayImg' title="Grayscale Image" src="#" alt="" onclick="swapFunctionGR();"></canvas>
                 <canvas id='negImg' title="Negative Image" src="#" alt="" onclick="swapFunctionNeg();"></canvas>
                 <br>
-                <canvas id='binaryMask' title="Binary Image" src="#" alt="" onclick="swapFunctionBin();"></canvas>
+                <canvas id='binaryMask' title="Binary Image" src="#" alt="" ></canvas>
                 <canvas id='histogram' src="#" alt=""></canvas>
         </div>
     </div>
