--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <h1 style="display: inline;color:white; font-size: 1.4em;margin-left: 10px;">None</h1><input id='none'type="checkbox" checked='checked'name="none"style='margin-left: 5px;'onclick="setConvolution();">
                         <h1 style="display: inline;color:white; font-size: 1.4em; margin-left: 10px;">Sharpen</h1><input id='sharpen'type="checkbox" name="sharpen" style='margin-left: 5px;' onclick="setConvolution();">
                         <h1 style="display: inline;color:white; font-size: 1.4em;margin-left: 10px;">Blur</h1><input id='blur'type="checkbox" name="blur"style='margin-left: 5px;'onclick="setConvolution();">
-                        <h1 style="display: inline;color:white; font-size: 1.4em;margin-left: 10px;">Edge Enhance</h1><input id='edgeEnhance'type="checkbox" name="edgeEnhance"style='margin-left: 5px;'onclick="setConvolution();">
+                        <h1 style="display: inline;color:white; font-size: 1.4em;margin-left: 10px;">Smooth</h1><input id='smooth'type="checkbox" name="smooth"style='margin-left: 5px;'onclick="setConvolution();">
                         <h1 style="display: inline;color:white; font-size: 1.4em;margin-left: 10px;">Edge Detect</h1><input id='edgeDetect'type="checkbox" name="edgeDetect"style='margin-left: 5px;'onclick="setConvolution();">
                         <h1 style="display: inline;color:white; font-size: 1.4em;margin-left: 10px;">Emboss</h1><input id='emboss'type="checkbox" name="emboss"style='margin-left: 5px;'onclick="setConvolution();">
                 </div>
