--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
             </h1>
             <div>
                 <h1 style='color:white; display: inline;'>Pixels are back on the menu, boys. </h1>
-                <h1 style='color:white; margin-left: 250px; display: inline;'> Binary Threshold:   </h1>               
+                <h1  style='color:white; margin-left: 150px; display: inline; font-size: 1.8em;'> Binary Threshold:   </h1>               
                 <input id='threshold' type="text" name="Binary Threshold" placeholder="(0-254)  Default: 127" class='button medium-btn'style='color:white;background-color:black;display: inline;'>
-                <div style="margin-left: 10px;display: inline;">
-                        <h1 style="display: inline;color:white; font-size: 1.4em;margin-left: 10px;">None</h1><input id='none'type="checkbox" checked='checked'name="none"style='margin-left: 5px;'onclick="setConvolution();">
-                        <h1 style="display: inline;color:white; font-size: 1.4em; margin-left: 10px;">Sharpen</h1><input id='sharpen'type="checkbox" name="sharpen" style='margin-left: 5px;' onclick="setConvolution();">
+                <div class='button'style="margin-left: 10px;display: inline;">
+                        <h1 style="display: inline;color:white; font-size: 1.8em;margin-left: 10px; color: dimgray;">Filters:</h1><h1 style="display: inline;color:white; font-size: 1.4em;margin-left: 10px;">None</h1><input id='none'type="checkbox" checked='checked'name="none"style='margin-left: 5px;'onclick="setConvolution();">
+                        <h1 style="display: inline;color:white; font-size: 1.4em;margin-left: 10px;">Sharpen</h1><input id='sharpen'type="checkbox" name="sharpen" style='margin-left: 5px;' onclick="setConvolution();">
                         <h1 style="display: inline;color:white; font-size: 1.4em;margin-left: 10px;">Blur</h1><input id='blur'type="checkbox" name="blur"style='margin-left: 5px;'onclick="setConvolution();">
                         <h1 style="display: inline;color:white; font-size: 1.4em;margin-left: 10px;">Smooth</h1><input id='smooth'type="checkbox" name="smooth"style='margin-left: 5px;'onclick="setConvolution();">
                         <h1 style="display: inline;color:white; font-size: 1.4em;margin-left: 10px;">Edge Detect</h1><input id='edgeDetect'type="checkbox" name="edgeDetect"style='margin-left: 5px;'onclick="setConvolution();">
                         <h1 style="display: inline;color:white; font-size: 1.4em;margin-left: 10px;">Emboss</h1><input id='emboss'type="checkbox" name="emboss"style='margin-left: 5px;'onclick="setConvolution();">
+                        <h1 style="display: inline;color:white; font-size: 1.4em;margin-left: 10px;">Custom</h1><input id='custom'type="checkbox" name="custom"style='margin-left: 5px;'onclick="setConvolution();">
                 </div>
             </div>
         <div>
@@ -36,6 +37,7 @@
             <input id="setScale"  class='button medium-btn' type="button" value="Rebuild / Up-scale Image" onclick="setSize();"/>
             <input id="saveCanvas"  class='button medium-btn' type="button" value="Save Canvas Image" onclick="saveCanvasImg();"/>
             <input class='button medium-btn' type="button" value="Help Menu" onclick="window.location.href = '#open-modal';" style="display: inline;"/>
+            <textarea id='customMatrix'  name="customMatrix" rows='20' wrap="soft" placeholder="Identity: (1)*[[0,0,0], [0,1,0], [0,0,0]]" style="font-size: 1.20em; height: 50px; width: 300px; border-radius: 15px;text-align: center; position: absolute; z-index: 10; display:none;"></textarea>
             <div id="open-modal" class="modal-window">
                 <div>
                     <a href="#modal-close" title="Close" class="modal-close">close &times;</a>
